k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toxic-service
spec:
  selector:
    app: toxic-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
