k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toxic-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: toxic.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toxic-service
                port:
                  number: 8000
